Implement base logic

--- a/github-profile-crawl/app/globals.css
+++ b/github-profile-crawl/app/globals.css
@@ -25,3 +25,12 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.container {
+  width: 100vw;
+  padding: 32px;
+}
+
+.search-input {
+  color: black;
+}
